[package]
name = "ranked-polls-discord-bot"
version = "0.1.0"
authors = ["David Johnson <john01dav@gmail.com>"]
edition = "2018"

[dependencies]
serenity = "0.10.7"
tokio = { version = "1.6.0", features = ["rt-multi-thread"]}
sqlx = { version = "0.5.3", features = ["runtime-tokio-native-tls", "mysql"] }